travis credential problem

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,6 @@ rvm:
   - "1.9.3"
 # uncomment this line if your project needs to run something other than `rake`:
 script: bundle exec rspec spec
+
+before_script:
+  - echo -e "Host github.com\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
