travis credential problem2

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,4 @@ script: bundle exec rspec spec
 
 before_script:
   - echo -e "Host github.com\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
+  - echo -e "Host heroku.com\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
